Fix mobile overflow

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -475,6 +475,10 @@ body {
 .banner {
   display: inline-block;
   margin-top: 30px;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .about {
